Fixed menu bolding behaviour on small screens

--- a/style.css
+++ b/style.css
@@ -57,14 +57,6 @@ h6 {
   font-weight: lighter;
   text-align: center;
 }
-/* Bold menu titles on hover */
-.menu:hover {
-  font-weight: bold;
-  -moz-transition: all 0.1s ease-in;
-  -o-transition: all 0.1s ease-in;
-  -webkit-transition: all 0.1s ease-in;
-  transition: all 0.1s ease-in;
-}
 /*.row {
   background-color: #eee;
   background-color: rgba(86,61,124,.15);
@@ -109,6 +101,14 @@ EXTRA LARGE SCREENS (DESKTOPS, LAPTOPS)
     border: 1px solid rgba(86,61,124,.2);*/
     text-align: center;
     font-size: 14px;
+  }
+  /* Bold menu titles on hover */
+  .menu:hover {
+    font-weight: bold;
+    -moz-transition: all 0.1s ease-in;
+    -o-transition: all 0.1s ease-in;
+    -webkit-transition: all 0.1s ease-in;
+    transition: all 0.1s ease-in;
   }
   .secondrowmenu {
     padding-bottom: 65px;
@@ -217,6 +217,14 @@ LARGER SCREENS (DESKTOPS, LAPTOPS)
     border: 1px solid rgba(86,61,124,.2);*/
     text-align: center;
     font-size: 14px;
+  }
+  /* Bold menu titles on hover */
+  .menu:hover {
+    font-weight: bold;
+    -moz-transition: all 0.1s ease-in;
+    -o-transition: all 0.1s ease-in;
+    -webkit-transition: all 0.1s ease-in;
+    transition: all 0.1s ease-in;
   }
   .secondrowmenu {
     padding-bottom: 50px;
